--- a/XmJose/XmJose.csproj
+++ b/XmJose/XmJose.csproj
@@ -41,6 +41,8 @@
     <Compile Include="Json\StreamExtensions.cs" />
     <Compile Include="Json\Deflate.cs" />
     <Compile Include="Json\CollectionsExtensions.cs" />
+    <Compile Include="Jwa\Iana.cs" />
+    <Compile Include="Json\ProtectedObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
